[gd_scene load_steps=3 format=3 uid="uid://c5stainedglassdemo"]

[ext_resource type="Script" path="res://src/minigames/stained_glass_demo.gd" id="1_demo"]
[ext_resource type="PackedScene" uid="uid://c5stainedglass001" path="res://scenes/minigames/stained_glass.tscn" id="2_puzzle"]

[node name="StainedGlassDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_demo")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = true
size = Vector2i(800, 500)
render_target_update_mode = 4

[node name="StainedGlass" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_puzzle")]

[node name="DebugUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="PiecesLabel" type="Label" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -40.0
offset_right = -90.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Pieces: 0 / 0"

[node name="ShowTargetsBtn" type="Button" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Show Targets"

[node name="AutoSolveBtn" type="Button" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -40.0
offset_right = 110.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Auto-solve"

[node name="ResetBtn" type="Button" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 120.0
offset_top = -40.0
offset_right = 190.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Reset"

[node name="WinLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -25.0
offset_right = 150.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "Puzzle Complete!"
horizontal_alignment = 1
vertical_alignment = 1
